tests/int/snapshots/r#mod__int__use_command__module_logger_flags_r.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - logger
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::CrawkArgs

----- stderr -----
