tests/int/snapshots/r#mod__int__use_command__module_main.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - main
---
success: true
exit_code: 0
----- stdout -----
crawk::{AnalysisOptions, Analyzer, version}

----- stderr -----
